test/org/midica/testfiles/failing/eff-func-tune-fine-invalid-5.midica
INCLUDE inc/instruments.midica


0: fine_tune.double.set(2)
